updated deploy style to be global

--- a/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
@@ -3,7 +3,7 @@
 <div class="content-padding">
 
 	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>{{server.name}}</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Hostname</th>
@@ -45,7 +45,7 @@
 	</div>
 	
 	<h1 class="subltitle "><i class="fa fa-bolt"></i>&nbsp;&nbsp;<span>Deploy a Version</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Date</th>
@@ -68,7 +68,7 @@
 
 
 	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Version</th>
