--- a/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
@@ -3,7 +3,7 @@
 <div class="content-padding">
 
 	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>Deployment #{{version.id_deploy_version}}</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Date</th>
