--- a/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
@@ -3,7 +3,7 @@
 <div class="content-padding">
 
 	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>Servers</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Server</th>
@@ -20,7 +20,7 @@
 
 
 	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
-	<div class="box-content2 deploy-wrap">
+	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
 				<th>Version</th>
