--- a/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
@@ -1,20 +1,47 @@
+
+
 <div class="top-pad"></div>
 
 <div class="content-padding">
 
-	<h1 class="title left"><i class="fa fa-comments-o"></i><span>Support</span></h1>
+	<h1 class="subltitle "><i class="fa fa-comments-o"></i>&nbsp;&nbsp;<span>Messages</span></h1>
+	<div class="box-content2 box-content-table">
+		<table>
+			<tr>
+				<th>Support ID</th>
+				<th>Updated</th>
+				<th>Name</th>
+				<th>Message</th>
+			</tr>
+			<tr ng-repeat="ticket in tickets">
+				<td><a href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</td>
+				<td>@TODO</td>
+<? /*				<td>{{version.timestamp*1000 | date:'MM/dd @ HH:mm'}}</td> */ ?>
+				<td>{{ticket.name}}</td>
+				<td>{{ticket.message}}</td>
 
-	<div class="divider"></div>
+			</tr>
+		</table>
+	</div>
 	
-	<div ng-repeat="ticket in tickets" class="tickets-side-item">
-		<a class="tickets-side-ticket" href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</a>
-		<span class="tickets-side-time">10 m ago</span>
-		<div class="divider"></div>
-		<br>
-		<span class="tickets-side-name">{{ticket.name}}: </span>
-		<span class="tickets-side-message">{{ticket.message}}</span>
+	<h1 class="subltitle "><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span>&nbsp;&nbsp;<i ng-show="!calls" class="fa fa-circle-o-notch fa-spin"></i></h1>
+	<div class="box-content2 box-content-table">
+		<table>
+			<tr>
+				<th>ID</th>
+				<th>From</th>
+				<th>Status</th>
+				<th>Start</th>
+				<th>End</th>
+			</tr>
+			<tr ng-repeat="call in calls">
+				<td><a href="/call/{{call.sid}}">{{call.sid}}</td>
+				<td>{{call.from}}</td>
+				<td>{{call.status}}</td>
+				<td>{{call.start_time}}</td>
+				<td>{{call.end_time}}</td>
+			</tr>
+		</table>
 	</div>
 
 </div>
-
-<hack-expand-content></hack-expand-content>
