added deliveries count

--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -52,6 +52,10 @@
 						<div class="field-key">Name</div>
 						<div class="field-value">{{ticket.order.driver.name}}</div>
 					</div>
+					<div class="field-row">
+						<div class="field-key">Deliveries</div>
+						<div class="field-value">{{ticket.order.driver.deliveries.length}}</div>
+					</div>
 
 				</div>
 				 
