--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -53,8 +53,16 @@
 						<div class="field-value">{{ticket.order.driver.name}}</div>
 					</div>
 					<div class="field-row">
+						<div class="field-key">Phone</div>
+						<div class="field-value"><a href ng-click="callText(ticket.order.driver.phone)">{{ticket.order.driver.phone | formatPhone}}</a></div>
+					</div>
+					<div class="field-row">
 						<div class="field-key">Deliveries</div>
 						<div class="field-value">{{ticket.order.driver.deliveries.length}}</div>
+					</div>
+					<div class="field-row">
+						<div class="field-key">Shift ends in</div>
+						<div class="field-value">@todo</div>
 					</div>
 
 				</div>
