partial issue stuff

--- a/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
@@ -24,7 +24,7 @@
 		</table>
 	</div>
 	
-	<h1 class="subltitle "><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span>&nbsp;&nbsp;<i ng-show="!calls" class="fa fa-circle-o-notch fa-spin"></i></h1>
+	<h1 class="subltitle"><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span>&nbsp;&nbsp;<div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
