--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -20,8 +20,8 @@
 				<div class="divider"></div>
 			</div>
 		</div>
-<? /*
-		<div ng-if="order.lastStatus['self-reply'] == 'rejected'">
+
+		<div ng-if="order.status.status == 'rejected'">
 			<div class="box-content-rejected box-order-status">
 				<div class="message">You rejected this order. </div>
 				<div class="buttons">
@@ -30,7 +30,6 @@
 				<div class="divider"></div>
 			</div>
 		</div>
-	*/ ?>
 
 		<div ng-if="order.status.status == 'accepted' && order.status.driver.id_admin == account.user.id_admin">
 			<div class="box-content-accepted box-order-status">
@@ -108,7 +107,7 @@
 
 <div class="content-padding">
 
-	<div class="dialog-message dialog-message-notice check-reminder"  ng-if="order.status.status != 'delivered' && order.status.driver.id_admin == account.user.id_admin">
+	<div class="dialog-message dialog-message-notice check-reminder"  ng-if="order.status.status != 'delivered' && order.status.status != 'rejected' && order.status.driver.id_admin == account.user.id_admin">
 		<b>Double check</b> to make sure you received exactly the right food!
 	</div>
 
