--- a/include/views/mail/crunchbutton/layout/html.phtml
+++ b/include/views/mail/crunchbutton/layout/html.phtml
@@ -1,18 +1,19 @@
 <html>
 <style>
+	<?=$this->display('layout/fonts')?>
 	body {
 		margin: 0;
 		padding: 0;
 	}
 	body, td {
 		font-size: 14px;
-		font-family: Museo Slab;
+		font-family: Museo Slab, Courier New, Courier, monospace;
 	}
 	h1 {
 		font-size: 40px;
 		color: #000;
 		margin: 0;
-		font-family: Museo Slab;
+		font-family: Museo Slab, Courier New, Courier, monospace;
 		text-shadow: #FFF 1px 2px 0;
 		z-index: 1;
 	}
@@ -64,8 +65,6 @@
 		text-align: center;
 		font-size: 14px;
 	}
-
-
 
 	.separator-big {
 		height: 20px;
