--- a/include/views/default/cockpit/layout/core.phtml
+++ b/include/views/default/cockpit/layout/core.phtml
@@ -218,7 +218,7 @@
 					<? if ( c::admin()->permission()->check( [ 'global','drivers-all', 'drivers-working-hours', 'drivers-working-hours-view' ] ) ) { ?>
 					<li class="">
 						<a href="/drivers/shift/summary">
-							<i class="icon-file-alt"></i> Summary
+							<i class="icon-file-alt"></i> Scheduled Shifts
 						</a>
 					</li>
 					<? } ?>
@@ -234,7 +234,7 @@
 					<? if ( c::admin()->permission()->check( [ 'global'] )  ) { ?>
 					<li class="">
 						<a href="/drivers/shift/status/shift">
-							<i class="icon-file-alt"></i> Status
+							<i class="icon-file-alt"></i> List All
 						</a>
 					</li>
 					<? } ?>
