added timezone conversion tools

--- a/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
@@ -48,7 +48,7 @@
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
-				<th>Date</th>
+				<th>Date (your TZ)</th>
 				<td><input type="datetime" ng-model="deploy.date"></td>
 			</tr>
 			<tr>
