--- a/include/views/default/cockpit2/layout/html.bottom.phtml
+++ b/include/views/default/cockpit2/layout/html.bottom.phtml
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
 $(function() {
-	App.request( App.service + 'config', function(r) {
+	App.request( App.service + 'config?init=1', function(r) {
 		App._remoteConfig = true;
 		App.init(r);
 	}, function() {
