--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -10,8 +10,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.18/angular-animate.min.js"></script>
 <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.0/angular-moment.min.js"></script>
+<script src="/assets/cockpit/js/moment.min.js"></script>
+<script src="/assets/cockpit/js/moment-timezone.min.js"></script>
+<script src="/assets/cockpit/js/angular-moment.min.js"></script>
 
 <!-- Payment stuff -->
 <script src="https://js.stripe.com/v2/"></script>
@@ -83,3 +84,4 @@
 <script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.datetime.js?v=<?=Cana_Util::gitVersion()?>"></script>
