--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3277,3 +3277,7 @@ input[type="checkbox"].switch + div:before {
 	margin-top: .3em;
 	float: right;
 }
+
+.deploy-commit-select {
+	width: 10em;
+}
