--- a/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
@@ -28,13 +28,13 @@
 				<th>Git Version / Tag</th>
 				<td>
 					<span ng-if="version.version">
-						<a href="{{version.server.repo}}/commit/{{version.version}}" target="_system">{{version.version}}</a>
+						<a href="https://github.com/{{version.server.repo}}/commit/{{version.version}}" target="_system">{{version.version}}</a>
 					</span>
 					<span ng-if="version.version && version.tag">
 						&nbsp;/&nbsp;
 					</span>				
 					<span ng-if="version.tag">
-						<a href="{{version.server.repo}}/tree/{{version.tag}}" target="_system">{{version.tag}}</a>
+						<a href="https://github.com/{{version.server.repo}}/tree/{{version.tag}}" target="_system">{{version.tag}}</a>
 					</span>
 				</td>
 			</tr>
