--- a/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
@@ -39,7 +39,7 @@
 			</tr>
 			<tr>
 				<th>Last Git Version</th>
-				<td>{{server.version.version}}</td>
+				<td><a href="https://github.com/{{server.repo}}/commit/{{server.version.version}}" target="_system">{{server.version.version}}</a></td>
 			</tr>
 		</table>
 	</div>
